--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <title>닉 생 성 기</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <style>
+     body {
+        background-repeat: no-repeat;
+        background-image: url( "https://www.sjsori.com/news/photo/201911/40411_48341_3957.jpg" );
+        background-size:cover;
+      }
+    </style>
   </head>
   <body>
     <h1>닉 생 성 기</h1>
